Commit inicial con el primer modelo de usuarios e inicialización del proyecto en Django para construir el backend, también se añadieron archivos .env y de la base de datos local al gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -128,3 +128,8 @@ dist
 .yarn/build-state.yml
 .yarn/install-state.gz
 .pnp.*
+# Entorno virtual (por ejemplo, para entornos virtuales creados con virtualenv)
+venv/
+.venv/
+#Base de datos local
+db.sqlite3
