--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,7 @@ jobs:
         node-version: 16
 
     - name: Install dependencies
-      run: npm ci
+      run: cd frontend && npm ci
 
     - name: Run tests
       run: npm test
