--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,47 +1,18 @@
-version: "3"
-
+version: '3'
 services:
-  mystore_frontend:
+  frontend:
     build:
-      context: ./mystore_frontend
-      dockerfile: Dockerfile
-    restart: always
-    depends_on:
-       - mystore_ms
+      context: ./frontend
     ports:
-      - "8085:80"
-  mystore_ms:
+      - "3000:3000"
+
+  backend:
     build:
-      context: ./bigstore_ms
-      dockerfile: Dockerfile
-    restart: always
-    depends_on:
-       - bigstoredb
-    environment:
-      DB_HOST: ${POSTGRES_HOST}
-      DB_PORT: ${POSTGRES_PORT}
-      DB_USER: ${POSTGRES_USER}
-      DB_PASSWORD: ${POSTGRES_PASSWORD}
-      DB_NAME: ${POSTGRES_DATABASE}
-      URL: ${URL}
+      context: ./backend
     ports:
       - "4000:4000"
-  bigstoredb:
-    image: postgres:14.1-alpine
+    depends_on:
+      - frontend
     environment:
-      POSTGRES_ROOT_PASSWORD: ${POSTGRES_ROOT_PASSWORD}
-      POSTGRES_DATABASE: ${POSTGRES_DATABASE}
-      POSTGRES_USER: ${POSTGRES_USER}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
-    ports:
-      - "5432:5432"
-    volumes:
-      - postgres-data:/var/lib/postgresql/data
-  adminer:
-    image: adminer:4.8.1
-    restart: always
-    ports:
-      - "8080:8080"
+      - URL=frontend:3000
 
-volumes:
-  postgres-data:
