--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -6,6 +6,6 @@ WORKDIR /code
 COPY requirements.txt /code/
 RUN pip install -r requirements.txt
 COPY . /code/
-ARG URL=0.0.0.0:4000
+ARG URL=localhost:4000
 
-CMD ["sh", "-c", "python manage.py makemigrations supermarket_ms && python manage.py migrate && python manage.py runserver $URL"]
+CMD ["sh", "-c", "python manage.py makemigrations && python manage.py migrate && python manage.py runserver $URL"]
