--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,17 +17,11 @@ jobs:
       with:
         node-version: 16
 
-    - name: Set up Python
-        uses: actions/setup-python@v2
-        with:
-          python-version: 3.12.0
-
-
     - name: Build Docker Django Image
-        run: cd django && docker build -t my-django-app .
+        run: cd backend && docker build -t my-django-app .
 
     - name: Run Django models test
-        run: cd django && docker run my-django-app sh -c "python manage.py test"
+        run: cd backend && docker run my-django-app sh -c "python manage.py test"
 
     - name: Build Docker Frontend Image
       run: cd frontend && docker build -t my-react-app .
