--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,11 +16,12 @@
     "react-router-dom": "^6.17.0"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.1.4",
+    "@testing-library/react": "^14.0.0",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
     "@vitejs/plugin-react": "^2.0.0",
-    "vite": "^3.0.0",
-    "@testing-library/react": "^14.0.0",
-    "jest": "^29.7.0"
+    "jest": "^29.7.0",
+    "vite": "^3.0.0"
   }
 }
