Se crea nueva instancia de la base de datos con Postgresql

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -3,10 +3,12 @@ WORKDIR /app
 COPY package*.json ./
 RUN npm install
 COPY . .
-RUN npm run build
+#RUN npm run dev
+#RUN npm run build
+CMD ["npm", "run", "dev"]
 
 #Ejecutamos un servidor web de producción directamente
-CMD npx serve -s build -l 3000
+#CMD npx serve -s build -l 3000
 
 # Exponemos el puerto
 EXPOSE 3000
