--- a/.gitignore
+++ b/.gitignore
@@ -133,3 +133,12 @@ venv/
 .venv/
 #Base de datos local
 db.sqlite3
+### Django ###
+*.log
+*.pot
+*.pyc
+__pycache__/
+local_settings.py
+db.sqlite3
+db.sqlite3-journal
+media
