--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,14 +1,23 @@
-FROM node:19-alpine3.17 AS build
+# Usar una imagen base de Node.js
+FROM node:18-alpine
+
+# Establecer el directorio de trabajo en el contenedor
 WORKDIR /app
-COPY package*.json ./
+
+# Copiar el archivo package.json al contenedor
+COPY package.json .
+
+# Instalar las dependencias del proyecto
 RUN npm install
+
+# Copiar el resto de los archivos del proyecto al contenedor
 COPY . .
-#RUN npm run dev
-#RUN npm run build
-CMD ["npm", "run", "dev"]
 
-#Ejecutamos un servidor web de producción directamente
-#CMD npx serve -s build -l 3000
+# Construir la aplicación para producción
+RUN npm run build
 
-# Exponemos el puerto
-EXPOSE 3000
+# Exponer el puerto en el que se ejecutará la aplicación
+EXPOSE 5173
+
+# Comando para iniciar la aplicación
+CMD [ "npm", "run", "preview"  ]
