--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,16 +11,23 @@
     "test": "jest"
   },
   "dependencies": {
+    "axios": "1.6.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.48.2",
     "react-router-dom": "^6.17.0"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.1.4",
+    "@testing-library/react": "^14.0.0",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
-    "@vitejs/plugin-react": "^2.0.0",
-    "vite": "^3.0.0",
-    "@testing-library/react": "^14.0.0",
-    "jest": "^29.7.0"
+    "@vitejs/plugin-react": "^2.2.0",
+    "autoprefixer": "10.4.16",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "postcss": "8.4.31",
+    "tailwindcss": "3.3.5",
+    "vite": "^3.0.0"
   }
 }
