--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,33 +2,45 @@
   "name": "five-to-fly-project",
   "private": true,
   "version": "0.0.0",
-  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "start": "vite start",
     "preview": "vite preview",
-    "test": "jest"
+    "test": "jest --verbose --runInBand"
   },
   "dependencies": {
+    "@testing-library/dom": "^9.3.3",
+    "@testing-library/user-event": "^14.5.1",
     "axios": "1.6.2",
+    "jest-svg-transformer": "^1.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.48.2",
     "react-router-dom": "^6.17.0",
-    "react-toastify": "^9.1.3"
+    "react-toastify": "^9.1.3",
+    "typescript": "^5.3.3"
   },
   "devDependencies": {
+    "@babel/core": "^7.23.6",
+    "@babel/preset-env": "^7.23.6",
+    "@babel/preset-react": "^7.23.3",
+    "@babel/preset-typescript": "^7.23.3",
     "@testing-library/jest-dom": "^6.1.4",
-    "@testing-library/react": "^14.0.0",
+    "@testing-library/react": "^14.1.2",
+    "@types/jest": "^29.5.11",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
     "@vitejs/plugin-react": "^2.2.0",
     "autoprefixer": "10.4.16",
+    "babel-jest": "^29.7.0",
+    "babel-preset-jest": "^29.6.3",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "postcss": "8.4.31",
     "tailwindcss": "3.3.5",
+    "ts-jest": "^29.1.1",
     "vite": "^3.0.0"
   }
 }
